<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/wisata1"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/w_kaligua"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="0dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/wisata1"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/wisata2"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/w_sirampog"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="0dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/wisata2"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/wisata3"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/w_panenjoan"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="0dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/wisata3"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/wisata4"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/w_ranto"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="0dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/wisata4"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/wisata5"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/w_malahayu2"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="0dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/wisata5"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/wisata6"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/w_penjalin"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="0dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/wisata6"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/wisata7"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/w_randusanga"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="0dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/wisata7"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>


            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/wisata8"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/w_mangrov"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="0dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/wisata8"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>