<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/kuliner1"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/bgkuliner"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="0dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/kuliner1"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/kuliner2"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/k_sate"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="0dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/kuliner2"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/kuliner3"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/k_segalengko"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="0dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/kuliner3"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/kuliner4"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/k_bandenglumpur"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="0dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/kuliner4"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/kuliner5"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/k_rujakteplak"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="0dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/kuliner5"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/kuliner6"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/k_kluban"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="0dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/kuliner6"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/kuliner7"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/k_orog2"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="0dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/kuliner7"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>